2003-07-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.4

2003-06-24  Jody Goldberg <jody@gnome.org>

	* Release 2.3.3

2003-05-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.1

Tue Feb  4 17:09:18 2003  Jonathan Blandford  <jrb@redhat.com>

	* Release 2.2.0.1

Tue Jan 21 01:15:14 2003  Jonathan Blandford  <jrb@gnome.org>

	* Release 2.2.0

Thu Jan 16 02:41:09 2003  Jonathan Blandford  <jrb@gnome.org>

	* Release 2.1.7

2003-01-10  Jody Goldberg <jody@gnome.org>

	* Release 2.1.6

2002-12-18  Jody Goldberg <jody@gnome.org>

	* Release 2.1.5

2002-11-23  Jody Goldberg <jody@gnome.org>

	* Release 2.1.3

2002-11-13  Pasupathi Duraisamy <pasupathi.duraisamy@wipro.com>

	* background-properties-capplet.c (drag_data_received_cb):
	Reset Picture option to "Wall paper" only in the case of 
	"none" while DnD. Fixes #94329

2002-11-02  Jody Goldberg <jody@gnome.org>

	* Release 2.1.2

2002-10-21  Jody Goldberg <jody@gnome.org>

	* Release 2.1.1

2002-10-01  Jody Goldberg <jody@gnome.org>

	* Release 2.1.0.1

2002-08-21  Jody Goldberg <jody@gnome.org>

	* Release 2.1.0

2002-08-19  Ross Burton  <ross@burtonini.com>

	* background.desktop.in: Fix the desktop file so that it
	validates.

2002-07-12  Jody Goldberg <jody@gnome.org>

	* background-properties.glade : The last of the ui-review.

2002-07-02  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=84014
	* background-properties-capplet.c (drag_data_received_cb) : unescape
	  the path.

2002-06-27  Jody Goldberg <jody@gnome.org>

	* background-properties-capplet.c (main) : use capplet_set_icon.

2002-06-18  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=85628
	* background-properties-capplet.c (main) : The dialog
	    - should not be modal
	    - has no parent to destroy with
	    - and should have a seperator
	    - set default response

2002-06-17  Jody Goldberg <jody@gnome.org>

	* Release 2.0.0

2002-06-05  Gediminas Paulauskas <menesis@delfi.lt>
